--- a/source/scss/blocks/visually-hidden.scss
+++ b/source/scss/blocks/visually-hidden.scss
@@ -1,9 +1,21 @@
-/* Этот блок используется для того, чтобы доступно прятать контент на странице. */
-
 .visually-hidden {
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
   position: absolute;
   width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+@mixin visually-hidden () {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
