--- a/source/scss/global.scss
+++ b/source/scss/global.scss
@@ -1,11 +1,13 @@
 html {
   box-sizing: border-box;
+  list-style: none;
 }
 
 *,
 *::before,
 *::after {
   box-sizing: inherit;
+  list-style: inherit;
 }
 
 body {
