--- a/source/html/views/index.html
+++ b/source/html/views/index.html
@@ -12,6 +12,7 @@
         </button>
         <a class="header__link-tel" href="tel:88126901010">8 (812) 690-10-10</a>
       </nav>
+      <h2 class="visually-hidden">йога</h2>
       <h3 class="header__title">Почувствуй расслабление в своем теле</h3>
       <a class="header__trial-lesson" href="#">Запишитесь на бесплатное пробное занятие</a>
     </header>
@@ -19,14 +20,14 @@
       <section class="yoga-directions">
         <h2 class="yoga-directions__title">Направления</h2>
         <div class="yoga-directions__container">
-          <article class="yoga-directions__item">
+          <article class="yoga-directions__item yoga-directions__item--promo">
             <picture>
               <source media="(min-width: 1280px)" srcset="img/xatxa-yoga-1280.jpg">
               <img class="yoga-directions__image" src="img/xatxa-yoga320.jpg">
             </picture>
             <div class="yoga-directions__schedule">
               <a class="yoga-directions__link" href="#"></a>
-              <div class="yoga-directions__wrapper">
+              <div class="yoga-directions__wrapper yoga-directions__wrapper--promo">
                 <h4 class="yoga-directions__direction">Хатха-йога</h4>
                 <p class="yoga-directions__work-days">Пн, Ср, Пт - с 12:00 до 15:00</p>
                 <p class="yoga-directions__work-days">Вт, Чт - c 18:00 до 21:00</p>
@@ -50,23 +51,6 @@
                   <p class="yoga-directions__teacher">Инструктор</p>
                   <p class="yoga-directions__teacher-name">Емельянова Полина</p>
                 </div>
-            </div>
-          </article>
-          <article class="yoga-directions__item">
-            <picture>
-              <source media="(min-width: 1280px)" srcset="img/cundalini-yoga1280.jpg">
-              <source media="(min-width: 768px)" srcset="img/cundalini-yoga768.jpg">
-              <img class="yoga-directions__image" src="img/cundalini-yoga320.jpg">
-            </picture>
-            <div class="yoga-directions__schedule">
-              <a class="yoga-directions__link" href="#"></a>
-              <div class="yoga-directions__wrapper">
-                <h4 class="yoga-directions__direction">Кундалини-йога</h4>
-                <p class="yoga-directions__work-days">Пн, Ср, Пт - с 12:00 до 15:00</p>
-                <p class="yoga-directions__work-days">Вт, Чт - c 18:00 до 21:00</p>
-                <p class="yoga-directions__teacher">Инструктор</p>
-                <p class="yoga-directions__teacher-name">Емельянова Полина</p>
-              </div>
             </div>
           </article>
           <article class="yoga-directions__item">
