--- a/source/scss/blocks/teacher.scss
+++ b/source/scss/blocks/teacher.scss
@@ -85,4 +85,9 @@
     background-position: 0px -40px;
     background-color: #FCF8FE;
   }
+
+  .teacher__title {
+    font-size: 30px;
+    padding-top: 130px;
+  }
 }
