--- a/source/scss/blocks/swipper.scss
+++ b/source/scss/blocks/swipper.scss
@@ -19,6 +19,7 @@
     position: absolute;
     color: #8E80A9;
     top: 6px;
+    font-size: 14px;
   }
 
   &:hover::before {
@@ -45,6 +46,7 @@
     position: absolute;
     color: #8E80A9;
     top: 6px;
+    font-size: 14px;
   }
 
   &:hover::before {
