--- a/source/scss/blocks/yoga-directions.scss
+++ b/source/scss/blocks/yoga-directions.scss
@@ -98,7 +98,7 @@
   .yoga-directions {
     background: url("../img/yoga-bckg-pattern-768.png"), #FCF8FE;
     background-repeat: no-repeat;
-    background-position: 25px 40px;
+    background-position: 20% 20px;
   }
 
   .yoga-directions__title {
@@ -119,6 +119,7 @@
     display: flex;
     width: auto;
     max-width: 360px;
+    line-height: 20px;
   }
 
   .yoga-directions__link {
@@ -150,7 +151,7 @@
   .yoga-directions {
     background: url("../img/yoga-bckg-pattern-1280.png"), #FCF8FE;
     background-repeat: no-repeat;
-    background-position: 25px -100px;
+    background-position: 35px -60px;
   }
 
   .yoga-directions__container {
